# HomeRecoEngine

./: .gitignore  README.md  README_zh.md  pyproject.toml
api/: app.py  constants.py  settings.py
api/apps/: __init__.py  house_reco_app.py
api/db/: __init__.py  reload_config_base.py  runtime_config.py
api/db/services/: data_import_service.py  example_usage.py  house_reco_service.py
api/utils/: __init__.py  file_utils.py  log_utils.py  vectorization_utils.py
conf/: service_conf.yaml.example
core/: settings.py
core/llm/: __init__.py  chat_model.py  cv_model.py  embedding_model.py  rerank_model.py  sequence2txt_model.py  tts_model.py
core/nlp/: __init__.py  rag_tokenizer.py  surname.py  synonym.py  term_weight.py
core/prompts/: prompts.py
core/utils/: __init__.py  milvus_config.py
