[project]
name = "homerecoengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymilvus",
    "bcembedding==0.1.5",
    "fastembed>=0.3.6,<0.4.0; sys_platform == 'darwin' or platform_machine != 'x86_64'",
    "fastembed-gpu>=0.3.6,<0.4.0; sys_platform != 'darwin' and platform_machine == 'x86_64'",
    "flagembedding==1.2.10",
    "torch>=2.5.0,<3.0.0",
    "transformers>=4.35.0,<5.0.0",
    "pdfplumber==0.10.4",
    "cachetools==5.3.3",
    "pillow==10.4.0",
    "ruamel-base==1.0.0",
    "ruamel-yaml>=0.18.6,<0.19.0",
    "fastapi",
    "fastapi_login",
    "uvicorn",
    "strenum>=0.4.15",
    "pandas",
    "openpyxl",
    "json-repair",
    "openai>=1.98.0",
    "zhipuai",
    "dashscope",
    "ollama",
    "ormsgpack>=1.5.0",
    "hanziconv==0.3.2",
    "pypdf>=5.3.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "readability-lxml>=0.8.1",
    "roman-numbers>=1.0.2",
    "seaborn>=0.13.2",
    "selenium-wire>=5.1.0",
    "shapely>=2.0.7",
    "snownlp>=0.12.3",
    "strenum>=0.4.15",
    "textblob>=0.19.0",
    "tika>=2.6.0",
    "tiktoken>=0.8.0",
    "tavily-python==0.5.1",
    "volcengine-python-sdk[ark]>=1.0.124",
    "watchdog>=6.0.0",
    "word2number>=1.1",
    "wordcloud>=1.9.4",
    "xgboost>=2.1.4",
    "xpinyin>=0.7.6",
    "google-generativeai>=0.8.1,<0.9.0",
    "datrie==0.8.2",
    "akshare>=1.15.78,<2.0.0",
    "azure-storage-blob==12.22.0",
    "azure-identity==1.17.1",
    "azure-storage-file-datalake==12.16.0",
    "anthropic==0.34.1",
    "arxiv==2.1.3",
    "aspose-slides>=24.9.0,<25.0.0; platform_machine == 'x86_64' or (sys_platform == 'darwin' and platform_machine == 'arm64')",
    "beartype>=0.18.5,<0.19.0",
    "bio==1.7.1",
    "blinker==1.7.0",
    "boto3==1.34.140",
    "botocore==1.34.140",
    "cachetools==5.3.3",
    "chardet==5.2.0",
    "cn2an==0.5.22",
    "cohere==5.6.2",
    "Crawl4AI==0.3.8",
    "dashscope==1.20.11",
    "deepl==1.18.0",
    "demjson3==3.0.6",
    "discord-py==2.3.2",
    "duckduckgo-search>=7.2.0,<8.0.0",
    "editdistance==0.8.1",
    "email-validator",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
